DemoMyApp/src/objects/Department__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Course_Prefix__c</fullName>
        <label>Course Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Full_Name__c</fullName>
        <label>Department Full Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Integration ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Public_Url__c</fullName>
        <label>Public Url</label>
        <type>Url</type>
    </fields>
    <label>Department</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Department_Full_Name__c</columns>
        <columns>Integration_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Department Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Departments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>